style: Rodando prettier em todos os arquivos
